Changed from using BASE64Decoder to OBase64Utils.